CASE -fix Safari browser bug.  Align column with left column.

--- a/css/telepath.css
+++ b/css/telepath.css
@@ -1219,6 +1219,10 @@ html .tele-panel-topbar a.tele-panel-case-close:visited {
 	background-color: #222222;
 }
 
+.tele-case-alerts-block.tele-block.no-title{
+	margin-top: 43px;
+}
+
 /*.tele-panel-case .tele-list {*/
 	/*padding: 20px 20px;*/
 /*}*/
